# moneybags

./: .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
config/: .gitkeep
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: bags-sniper.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: verify_setup.py
src/bags_sniper/: __init__.py  cli.py  main.py
src/bags_sniper/backtest/: __init__.py  analytics.py  engine.py  simulator.py
src/bags_sniper/core/: __init__.py  circuit_breaker.py  config.py  deployer_intelligence.py  filter_engine.py  position_sizer.py  professional_trader.py  quality_gate.py  trading_engine.py
src/bags_sniper/models/: database.py
src/bags_sniper/services/: bags_api.py  data_ingestion.py  deepseek_ai.py  jito_bundle.py  jupiter_api.py  metrics.py  rate_limiter.py  solana_rpc.py  telegram_bot.py  token_discovery.py
tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_deployer_intelligence.py  test_filter_engine.py  test_rate_limiter.py  test_smoke.py
